Updated the quad tree tests, with dependencies to use Junit5. Also updated tests to reflect the new situation after new selector parser is done